--- a/src/main/webapp/css/user-page.css
+++ b/src/main/webapp/css/user-page.css
@@ -23,6 +23,7 @@
 
 /* Give each message a rounded border. */
 .message-div {
+  background-color: white;
   border: thin solid black;
   border-radius: 5px;
   margin-top: 20px;
@@ -30,6 +31,7 @@
 
 /* Add a bottom border to the message header. */
 .message-header {
+  background-color: #d7d7e2;
   border-bottom: thin solid black;
   padding: 5px;
 }
